changing the logic to calculate the sentiment-> introduced a new variable sentiment of type sentiment to be taken from user, and for every week, the highest felt sentiment (as given by the user) is then returned.